# llm_deploy

./: .gitignore  config.yaml  main.py  pyproject.toml
fufan-chat-api/: requirements.txt
fufan-chat-api/configs/: kb_config.py  model_config.py  server_config.py
fufan-chat-api/playground/test_model/: chatglm3_langchain.py
fufan-chat-api/playground/test_mysql_conn/: basic_sqlalchemy.py
fufan-chat-api/server/db/: base.py  init_models.py  session.py
