[project]
name = "llm-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens==2.4.1",
    "blinker>=1.6.2",
    "executing==2.0.1",
    "fastapi==0.111.0",
    "langchain==0.2.7",
    "langchain-community==0.2.7",
    "langchain-openai>=0.1.25",
    "loguru==0.7.2",
    "modelscope>=1.29.2",
    "six==1.16.0",
    "zhipuai==2.1.2",
]
